--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
     <title>Password Generator</title>
 </head>
 <body>
-
-
+    <div class="container">
+        <h1>Password Generator</h1>
+        <section>
+            <h2>Generate a Password</h2>
+            <hr>
+            <!-- Password Character Selection -->
+            <input type="checkbox" name="specialChars" value="specialCharsVal"> !@#$%^&* <br>
+            <input type="checkbox" name="numbers" value="numbersVal"> 0-9 <br>
+            <input type="checkbox" name="lwrChars" value="lwrCharsVal" checked> a-z <br> 
+            <input type="checkbox" name="upprChars" value="upprCharsVal" checked> A-Z <br> 
+            <textarea placeholder="Your Secure Password"></textarea>
+            <hr>
+            <button class="col-6 passGenButn">Generate Password</button>
+            <button class="col-6 clipboardButn">Copy to Cipboard</button>
+        </section>
+    </div>
     <script src="passwdGen.js"></script>
 </body>
 </html>
