--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Password Generator</title>
 </head>
@@ -15,7 +15,7 @@
         <section>
             <div class="row">
                 <div class="col-12">
-                    <h2>Generate a Password</h2>
+                    <h3>Generate a Password</h3>
                 </div>
             </div>
             <hr>
@@ -46,6 +46,6 @@
             </div>
         </section>
     </div>
-    <script src="passwdGen.js"></script>
+    <script src="assets/js/passwdGen.js"></script>
 </body>
 </html>
