made it so code generator checks for each checkbox condition and generates a password based off the selected char types. thanks brian!

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             <textarea id="passwordBox" rows="4" placeholder="Your Secure Password"></textarea>
             <div class="row text-center">
                 <div class="col-sm-3 specialChars">
-                    <input type="checkbox" name="specialChars"> !@#$%
+                    <input type="checkbox" name="specialChars"checked> !@#$%
                 </div>
                 <div class="col-sm-3">
-                    <input type="checkbox" name="numbers"> 0-9
+                    <input type="checkbox" name="numbers"checked> 0-9
                 </div>
                 <div class="col-sm-3">
-                    <input type="checkbox" name="lwrChars"> a-z 
+                    <input type="checkbox" name="lwrChars"checked> a-z 
                 </div>
                 <div class="col-sm-3">
-                    <input type="checkbox" name="upprChars"> A-Z 
+                    <input type="checkbox" name="upprChars"checked> A-Z 
                 </div>
             </div>
             <hr>
