added copt to clipboard function for copying generated password

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div class="col-sm-3">
                     <input type="checkbox" name="upprChars"checked> A-Z 
                 </div>
+                
             </div>
             <hr>
             <div class="row">
@@ -41,7 +42,7 @@
                     <button class="passGenButn" onclick="createPassword()">Generate Password</button>
                 </div>
                 <div class="col-md-6">
-                    <button class="clipboardButn">Copy to Clipboard</button>
+                    <button class="clipboardButn" onclick="copyToClipboard()">Copy to Clipboard</button>
                 </div>
             </div>
         </section>
